--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>综合数据管理系统</title>
+    <title>爱南京-管理系统</title>
     <link rel="shortcut icon" type="image/x-icon" href="static/img/favicon.ico"/>
     <!-- css -->
     <!--<link rel="stylesheet" href="/static/css/index.css">-->
